fix grain overlay height to avoid multiple overlays overlapping

--- a/apps/web/src/components/FooterSection/FooterSection.module.scss
+++ b/apps/web/src/components/FooterSection/FooterSection.module.scss
@@ -38,7 +38,7 @@
       left: 0;
       position: absolute;
       width: 100%;
-      height: 100%;
+      height: 97%;
     }
   }
 
